--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>Jack</h1>
 <p>Version Control Essentials</P>
+<p>This is really hard to set up since I want to store everything in the cloud</P>
