New words added to document :memo:

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Jack</h1>
 <p>Version Control Essentials</P>
 <p>This is really hard to set up since I want to store everything in the cloud</P>
+<p>Whoops gotta write more words</P>
