--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 <p>This is really hard to set up since I want to store everything in the cloud</P>
 <p>Whoops gotta write more words</P>
 <p>I like to eat bacon</P>
-<!-- I made a comment -->
+<p>New Text</P>
